# fileshare-rs

./: .env.local  .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  utils.rs
src/config/: mod.rs
src/cron/: mod.rs
src/dtos/: file.rs  user.rs
src/handler/: file.rs  user.rs
src/models/: file.rs  mod.rs  token.rs  user.rs
src/routes/: file.rs  health.rs  mod.rs  user.rs
src/utils/: cloudinary.rs  email.rs  extractor.rs  file.rs  hashing.rs  jwt.rs  misc.rs  mod.rs
uploads/: file name this is
