[package]
name = "fileshare-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }

# environment variables
dotenvy = "0.15.7"

# handle json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# database
mongodb = "3.2.3"

# datetime
chrono = { version = "0.4.40", features = ["serde"] }

# log tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# validate
validator = { version = "0.20.0", features = ["derive"] }

# hash data
argon2 = "0.5.3"

# error handling
thiserror = "2.0.12"

# handle fetch requests
reqwest = { version = "0.12.15", features = ["json"] }

# uuid
uuid = "1.16.0"
